Cleanup code.